# pingcap-talent-plan

./: README.md
pingcap-rust-project-1/: Cargo.toml
pingcap-rust-project-1/src/: kvstore.rs
pingcap-rust-project-2/: Cargo.toml
pingcap-rust-project-2/src/: errors.rs  kvstore.rs  lib.rs
pingcap-rust-project-2/tests/: tests.rs
