[package]
name = "kvs"
version = "0.1.0"
authors = ["Lingxiang LinG Wang <w93163red@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1.0.32"
thiserror = "1.0.20"
serde = "1.0.117"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
